# SnapTeX

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
scripts/: run_ollama.bat  run_ollama.sh
