[project]
name = "SnapTeX"
version = "0.1.0"
description = "Screenshot to LaTeX converter powered by VLMs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["latex", "screenshot", "ocr", "vlm", "clipboard", "hotkey", "equation"]
dependencies = [
    "openai>=2.16.0",
    "pillow>=12.1.0",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]

